# ChangeLog for app-admin/python-updater
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/python-updater/ChangeLog,v 1.92 2014/01/20 02:46:11 floppym Exp $

  20 Jan 2014; Mike Gilbert <floppym@gentoo.org> -python-updater-0.10-r2.ebuild,
  -python-updater-0.10.ebuild:
  Remove old.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> python-updater-0.11.ebuild,
  python-updater-9999.ebuild:
  Add arm64 love.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> python-updater-0.11.ebuild:
  Mark m68k/sh stable.

  07 Aug 2013; Agostino Sarubbo <ago@gentoo.org> python-updater-0.11.ebuild:
  Stable for x86, wrt bug #477950

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> python-updater-0.11.ebuild:
  Stable for s390, wrt bug #477950

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> python-updater-0.11.ebuild:
  Stable for ppc64, wrt bug #477950

  04 Aug 2013; Agostino Sarubbo <ago@gentoo.org> python-updater-0.11.ebuild:
  Stable for ia64, wrt bug #477950

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> python-updater-0.11.ebuild:
  Stable for sparc, wrt bug #477950

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> python-updater-0.11.ebuild:
  Stable for alpha, wrt bug #477950

  28 Jul 2013; Agostino Sarubbo <ago@gentoo.org> python-updater-0.11.ebuild:
  Stable for arm, wrt bug #477950

  28 Jul 2013; Agostino Sarubbo <ago@gentoo.org> python-updater-0.11.ebuild:
  Stable for ppc, wrt bug #477950

  24 Jul 2013; Agostino Sarubbo <ago@gentoo.org> python-updater-0.11.ebuild:
  Stable for amd64, wrt bug #477950

  24 Jul 2013; Jeroen Roovers <jer@gentoo.org> python-updater-0.11.ebuild:
  Stable for HPPA (bug #477950).

*python-updater-0.11 (24 Mar 2013)

  24 Mar 2013; Mike Gilbert <floppym@gentoo.org> +python-updater-0.11.ebuild,
  python-updater-9999.ebuild:
  Version bump. Update the ebuilds to point at gentoo infrastructure.

  28 May 2012; Kacper Kowalik <xarthisius@gentoo.org>