@@ -4,14 +4,14 @@ Hash: SHA256
 AUX python-updater-0.10-expand-aliases.patch 171 SHA256 734ff3178594cfc7717bf61a07f3686c9d4d664feb28623ae06b9ea0493b8757 SHA512 b8a2775e8b64610caf0f805fcd321406331d5ab4983a6a59bcf06ef7be1a5611473c63a49c9eb97889c6aa0b6ba3d5966d51de9813f4b0cccaebfe99b09f0203 WHIRLPOOL 3e52f837c8aeffb5fb704bfd07e71e733bb4c75be8e340dc507bc11f576009ea07ea2b303a5928e00f994a980aaf00d14ab127f040cf7b5dafccab58023869a6
 AUX python-updater-0.10-only-alias-sed-if-exists.patch 965 SHA256 d9d824edc1478550245e51a3635064c3d245de38f8551a7d9e6225f82d8f5362 SHA512 545a8cd939347f8ad2cbccfb0832e291cf2d7b370abd81b4035d217d9677a2437b5562545fd9d23a9d03d458a8ad25a4ba95d1c9d1d5c8ce728b7c4fc7e0aea7 WHIRLPOOL 8791d6b4bdef33ee706f0eeda8f583feb6daf74428a4465a85f61a8ccf35d7009217538685502a9794b81d44e90f992c0c44e534d745207ed83892f6f98ca24a
 DIST python-updater-0.11.tar.bz2 9355 SHA256 5c88b2a56febe67e783855a1c51c4c89637e948704834ad1f5d1b6e46cc4a7b8 SHA512 613d0b772faed65690b3999fb557f4414926f72f2f6084cf2e91c225a036df8c1a3c73e4fa6feac191cb7ac89035d3bcae9a6b23f479e2cf63d69bb8c57217fe WHIRLPOOL 9eab112192a3515e71d4971b89282d3f9725629af5b4db6a090d74f4c3dc9421dbfbc9c6c0393b3d6387d4926b1eb1bbc6291ac18ae31e86ecfeb37cfba68b14
-EBUILD python-updater-0.11.ebuild 1100 SHA256 77858f657c6375519e084a18e14bd5cb1abee0284d437f424698f8cac719fe74 SHA512 874013c0abbe831752e9011ee9be79db465bcef0fcb892d665da12642e31cce8c2dd464c1a9007f0ae203f92b430be3614b1db55da4a3abb867f81c56903a08c WHIRLPOOL 866deebfb7c0209847c45d882b22ccb0580d757fc13e030b5c7182f981ac38cbcad02fdfd5b59b36b3d8b0e801e56555c1c2f5601050aac088a8eb4eff057a4d
-EBUILD python-updater-9999.ebuild 1113 SHA256 9dd9da37f3a3d0a1fe34ebc2d0a3afc09502bdddb7647b36c527a32c2a0696fa SHA512 2165bbbcd3d7cae16e4007dd97ada17a0411d2a204887b8d92bdc536bd38895cfa011bc4e0d22665ab8bb1054ab91c09c2b84117e1c66e048ac6d02bd8dc07e0 WHIRLPOOL f8067801d4195ae5fde8c1001b1764546d78f09f1acb8216da3905408aacab076537347e4f9064915625bb12a9c5fc33f2a8da427a64b9950266e18c848f4970
-MISC ChangeLog 12563 SHA256 701e49ed46e3b844e29594f096e1e8e6884a1a8abc2c453cc13390696ead26b1 SHA512 ce2ab8cd781723799b404a094cf397eb090047874f256312e5daa2d818040dc022cb546122db52600eb30c600eb094ea4ac9270868cf67fef33d5eae602aa496 WHIRLPOOL 0986f4bac6d32dd82e637c800bc271c7bfa1ac129d9fd14ca340c5885f234bebe82cb5dc66241bb402316602cb7f7696398419668b4e8803f696de8967764377
+EBUILD python-updater-0.11.ebuild 1084 SHA256 1e8bc2297d327b26b7200cafcc0ca19ef2ecfd16dad88902ba2e6d1fbf9c5c06 SHA512 0785f6b97b3f085a801032b755d067a2588af718c3400ca899f7879836ca686df4595bb0070fd57cd09641d0d2811ecae9a1789ec582c9916f9cccf3f3a421a7 WHIRLPOOL 841a3e3408fe7f0164674b00a8fd19842410ffc8d4cafde4b280c32d1598c19d21c93d7f01b335c84aadd40d0fe33fefbf81321bc0824faa8141cb88a90622b9
+EBUILD python-updater-9999.ebuild 1097 SHA256 49a0ee4d81519d418ced3124636b97a6b76d96b63f0946575090aee24d464bfb SHA512 e34d00f34214c98b157ab90b3441e574a40400d5099f377b88772c006b79c12ab493f87b4e9854a52a414ff1e41606160ba5852e006127287ea2b913e0637bba WHIRLPOOL 88445df654130615fcc86ae77d02e3ff13165cb36ff1dd61e563f7d8d2cca743abaf1f886abd5e69dd3b446d16f4074f7a0c74bd9f64a3d4d8321638d2342c74
+MISC ChangeLog 12721 SHA256 9485963efe2258f8e701964f85d24779ebd455f54073497465bb5e69ffa63314 SHA512 b7a01c2afe7f0b609b8cc29341393990a8aa28ad19dfd8216e3d16982efccd504ab151fabefca3d766753034f15aa429ed3e0e61de4be8301afc22ca12d52879 WHIRLPOOL 6cedde15da6a2ddd800e470f8cc12d87d1a20e1365ff89f88d4d600478339e78b1be88ad32c9c10b77203c572c6e90ae53b3856af4796972b511bb9ae8eea4ca
 MISC metadata.xml 159 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4 SHA512 d5a29b9f6ecddfc368dc0f1f8919cd3c3d6ecf2c7a82bc8d4c0dd51b7aa15561ed0462acb8ae39bc84f97e706e82d9b4b06357494f164f1648219f604b473fbe WHIRLPOOL 36e19b63a1b307cc200e1d73499b7477f73799db3909e71b5a0916084728351c76d400f65e2c8b3f8fffb2c9ba54c0bd235f785b47414178d98f11d64a9420d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlLcjfQACgkQC77qH+pIQ6QcSAD/Rki5q5WxCBrG1y/Itc5AxLnr
-2z0XpezT3iwiK8ah1H0A/izhdqZ8udZjnxeWC4eBgQ1wR32rjE7A0vM9S/J3CDfb
-=bJrD
+iF4EAREIAAYFAlLcjrAACgkQC77qH+pIQ6QtYgEAnrfwmgdxvj5AvF36V4PCipF5
+q4ytAmLFWsBfq0FFYjIA/0C9xnFPwQiFvT6UHv7EC6lkdl8ptbA5xxevSXL0suVH
+=Z/QL
 -----END PGP SIGNATURE-----
